2019-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.c: Revert to previous 'name' storage. Callback
	functions in structure block being properly const.

	* coders/xpm.c: Make more data const.

	* coders/pnm.c: Make more data const.

	* coders/palm.c: Make more data const.

	* coders/meta.c: Make more data const.

	* coders/dcraw.c: Make more data const.

	* magick/command.c: Fix compilation problem when HasX11 is not
	defined.

2019-05-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Make more data const.

2019-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (RegisterWEBPImage): Make more data const.

	* coders/svg.c (RegisterSVGImage): Reduce BSS size.

	* coders/miff.c (RegisterMIFFImage): Fix version reporting.

	* coders/ttf.c (RegisterTTFImage): Fixed reporting of FreeType
	version.

	* coders/tiff.c (RegisterTIFFImage): Reduce BSS size.

	* coders/sfw.c (ReadSFWImage): Make SFW static data completely
	const.

	* coders/ps3.c: Make PS3 static data completely const.

	* coders/pict.c: Make PICT static data completely const.

	* magick/error.c (ThrowException, ThrowLoggedException): Handle
	the case where some passed character strings refer to existing
	exception character strings.  Fixes SourceForge issue #603
	"heap-use-after-free in function ThrowLoggedException of
	magick/error.c".
	(CatchException): Restructure so there is one return point.

	* coders/miff.c (ImportRLEPixels): Fix heap overflow caused by a
	typo in the code.  Also fix undefined behavior caused by large
	left shifts of an unsigned char.  Fixes SourceForge issue #608
	"heap-buffer-overflow in ImportRLEPixels of coders/miff.c.

2019-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix subrange/scene handling in
	'ping' mode so it is like the other formats.  Only the first frame
	was being enumerated while in 'ping' mode.

2019-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
