@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190513"
-#define public MagickPackageReleaseDate "snapshot-20190513"
+#define public MagickPackageVersionAddendum ".020190514"
+#define public MagickPackageReleaseDate "snapshot-20190514"
